fix: fix issue with dark mode in icons

--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -65,7 +65,7 @@
 
 .social-links a i {
   font-size: 24px;
-  margin-right: 10px;
+  margin-right: 12px;
 }
 
 .social-links a:hover {
@@ -76,7 +76,7 @@
   color: #333333;
   font-size: 20px;
   display: block;
-  margin: 5px 0;
+  margin: 5px 5px;
 }
 .social-links .uil:hover {
   color: #ffc200;
